--- a/aws/auth/tsconfig.json
+++ b/aws/auth/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "es2020"
     ],
+    "resolveJsonModule": true,
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
