--- a/lib/package.json
+++ b/lib/package.json
@@ -2,9 +2,10 @@
   "name": "aws-lib",
   "version": "1.0.0",
   "description": "A simple, tiny browser application library for passwordless authentication, authorization, and a serverless API on AWS.",
-  "main": "index.js",
+  "main": "dist.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup index.js --file dist.js --format umd --name \"awsLib\" -p json"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +14,9 @@
     "@aws-sdk/client-cognito-identity": "^3.238.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.238.0",
     "@aws-sdk/signature-v4": "^3.226.0",
-    "axios": "^1.2.1"
+    "@rollup/plugin-json": "^6.0.0",
+    "axios": "^1.2.1",
+    "rollup": "^3.10.0"
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
