working on api module

--- a/lib/package.json
+++ b/lib/package.json
@@ -5,7 +5,8 @@
   "main": "dist.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "start": "rollup -c -w"
   },
   "type": "module",
   "author": "",
