--- a/sample-react/package.json
+++ b/sample-react/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "aws-lib": "file:../lib"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "aws-lib": "file:../lib"
   }
 }
